@@ -2,34 +2,40 @@ package com.openclassrooms.mdd.service.query;
 
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
 import com.openclassrooms.mdd.dto.response.ArticleResponse;
-import com.openclassrooms.mdd.dto.response.ArticlesResponse;
 import com.openclassrooms.mdd.mapper.ArticleMapper;
 import com.openclassrooms.mdd.model.ArticleEntity;
 import com.openclassrooms.mdd.repository.ArticleRepository;
+
 import org.springframework.data.domain.Sort;
 
 @Service
 public class ArticleQueryService {
     private final ArticleRepository articleRepository;
     private final ArticleMapper articleMapper;
+    private final SubscriptionQueryService subscriptionQueryService;
 
-    ArticleQueryService(ArticleRepository articleRepository,ArticleMapper articleMapper) {
+    ArticleQueryService(ArticleRepository articleRepository,ArticleMapper articleMapper,SubscriptionQueryService subscriptionQueryService) {
         this.articleRepository = articleRepository;
         this.articleMapper = articleMapper;
+        this.subscriptionQueryService = subscriptionQueryService;
     }
 
-    public ArticlesResponse findAll(boolean desc) {
+    public List<ArticleResponse> findAllSubscribedByUser(boolean desc,Long userId) {
+        List<Long> userSubThemeIds = subscriptionQueryService.getThemeIdsUserSub(userId);
+
+        if (userSubThemeIds.isEmpty()) {
+            return List.of();
+        }
+        
         Sort sort = desc ? Sort.by(Sort.Direction.DESC, "createdAt") : Sort.by(Sort.Direction.ASC, "createdAt");
 
-        List<ArticleResponse> articles = articleRepository.findAll(sort).stream()
+        return articleRepository.findAllByThemeIdIn(userSubThemeIds,sort).stream()
                 .map(articleMapper::toDto)
-                .collect(Collectors.toList());
-        return ArticlesResponse.builder().articles(articles).build();
+                .toList();
     }
 
     public ArticleResponse findById(Long id) {
